# ts-train

./: .dockerignore  .gitignore  .gitignore copy  .pre-commit-config.yaml  Makefile  README copy.md  README.md  SIGNATURES  TODO  dockerfile  pipeline.yaml  pyproject copy.toml  pyproject.toml
.alm/: build.jenkinsFile  release.jenkinsFile
data/: features.xlsx  features_example.yml
notebooks/: aggregations.ipynb  new_notebook.ipynb  test_e2e.ipynb  tr2ts_v2.ipynb  tr2ts_v3.ipynb  tr2ts_v4.ipynb  transactions_to_time_series_categorical.ipynb
notebooks/demos/: demo_dati_reali_v2.ipynb
notebooks/filling_test_exp/: filling_test_exp_v1.ipynb  filling_test_exp_v2.ipynb
notebooks/ft2model/: design_training.ipynb  e2e.ipynb  training_catboost.ipynb  training_helper_demo.ipynb  training_sklearn.ipynb  training_xgboost.ipynb  training_xgboost_pyspark.ipynb
notebooks/timezone_exp/: timezone_exp_v2.ipynb
notebooks/tr2ts/: tr2ts_v2.ipynb  tr2ts_v3.ipynb  tr2ts_v5.ipynb
notebooks/tr2ts/demos/: demo_dati_reali.ipynb
notebooks/ts2ft/: demo_v0.ipynb  demo_v1.ipynb  feature_catalog_exp.ipynb  feature_catalog_exp_v2.ipynb  feature_catalog_from_excel.ipynb  feature_catalog_params_extractor.ipynb
notebooks/varie/: generazione_y_target.ipynb
src/ts_train/: builder.py  main.py  trasformation_pipeline.py
src/ts_train/common/: enums.py  types.py  utils.py
src/ts_train/folder/: script.py
src/ts_train/ft2model/: classification_training.py  core.py  training_helper.py
src/ts_train/step/: aggregating.py  aggregation.py  core.py  filling.py  time_bucketing.py
src/ts_train/tr2ts/: aggregating.py  filling.py  time_bucketing.py
src/ts_train/transactions_to_timeseries/: __init__.py  aggregating.py  filling.py  time_bucketing.py
src/ts_train/ts2ft/: feature_generating.py  feature_pruning.py
tests/ts_train/: conftest.py  test_main.py
tests/ts_train/step/: test_aggregating.py  test_aggregation.py  test_filling.py  test_time_bucketing.py
tests/ts_train/timeseries_to_features/: test_feature_generating.py  test_feature_pruning.py
(+17 files in other folders)
