[tool.poetry]
name = "my-package"
version = "1.0.1"
description = "This is my whl package"
authors = ["Mario Rossi"]
readme = "README.md"
packages = [{include = "my-package"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
