[tool.poetry]
name = "ts-train"
version = "0.1.0"
description = ""
authors = ["AGI3YDM <luca.sorrentino@agilelab.it>"]
readme = "README.md"
packages = [{include = "ts_train", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
pre-commit = "^3.3.3"
pyspark = "^3.4.1"
omegaconf = "^2.3.0"
pydantic = "^2.0"
pydantic-settings = "^2.0.0"
pytest = "^7.4.0"
loguru = "^0.7.0"
typing-extensions = "^4.7.1"
pytest-cov = "^4.1.0"
black = "^23.7.0"
mypy = "^1.4.1"
ruff = "^0.0.278"
pyspark-assert = "^0.1.0"
pandas-stubs = "^2.0.2.230605"
pandas = "^2.0.3"
tsfresh = "^0.20.1"
pyarrow = "^13.0.0"



[tool.ruff]
ignore = ["F403", "F405"] # allow to import *

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
