[tool.poetry]
name = "ts-train"
version = "1.0.0"
description = ""
authors = ["AGI3YDM <luca.sorrentino@agilelab.it>", "EXTA06F <fabio.vaccaro@agilelab.it>"]
readme = "README.md"
packages = [{include = "ts_train", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.0"
pydantic-settings = "^2.0.0"
typing-extensions = "^4.7.1"
pandas = "^2.0.3"
tsfresh = "^0.20.1"
pyarrow = "^13.0.0"
xgboost = "^2.0.0"
pyspark = "^3.4.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.4.0"
ruff = "^0.0.291"
black = "^23.9.1"
pytest = "^7.4.2"
mypy = "^1.5.1"
pyspark-assert = "^0.1.0"
pytest-cov = "^4.1.0"
pandas-stubs = "^2.0.3.230814"
omegaconf = "^2.3.0"
loguru = "^0.7.0"

[tool.ruff]
ignore = ["F403", "F405"] # allow to import *

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
